@@ -1,3 +1,9 @@
+2023-07-25 Frederik Seiffert <frederik@algoriddim.com>
+
+	* Headers/Foundation/NSFileManager.h:
+	* Source/NSFileManager.m:
+	Fixed NSFileManager thread safety.
+
 2023-06-10 Riccardo Mottola <rm@gnu.org>
 
 	* Tests/base/NSURL/Helpers/Launch.h:
